# Mean-Reversion-Projekt

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  mlflow.db  mypy_analysis.ini  mypy_backtest.ini  mypy_processing.ini  mypy_universe.ini  pyproject.toml
.github/workflows/: analysis-ci.yml  backtest-ci.yml  processing-ci.yml  universe-ci.yml
analysis/: README.md  atomic_io.py  constants.py  mp_helpers.py  numerics.py  preprocess.py  prometheus_metrics.py  rolling.py  runner_analysis.py
processing/: README.md  config_loader.py  fill.py  filtering_stage.py  input_mode.py  io_atomic.py  io_utils.py  outliers.py  pipeline.py  quality.py  quality_helpers.py  vendor_guards.py
processing/scripts/: causality_audit.py  inspect_artifacts.py  system_check.py
runs/configs/: config_analysis.yaml  config_backtest.yaml  config_universe.yaml
runs/data/: adv_map_usd.csv  adv_map_usd.csv.meta.json  filtered_pairs.csv  filtered_pairs.pkl  nasdaq_screener_1772353567950.csv  raw_prices.pkl  raw_prices_unadj.pkl  raw_volume.pkl  raw_volume_unadj.pkl  ticker_adv.pkl  universe_checkpoint.json  universe_manifest.json
runs/results/: README.md
universe/: README.md  adv.py  adv_outputs.py  artifact_defaults.py  backfill.py  builder.py  checkpoint.py  coercion.py  config.py  downloads.py  exchange_source.py  filters.py  fs_atomic.py  fundamentals.py  monitoring.py  numeric_utils.py  outputs.py  panel_utils.py  reset_universe.py  run_steps.py  runner_universe.py  storage.py  symbol_filter_defaults.py  symbol_utils.py  tr_audit.py  utils.py  vendor.py
(+538 files in other folders)
